// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPassword should render as a password field 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 bDHBGq"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-sc-1i8sd1r-1 lpjmUZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="InputPassword"
        type="password"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <button
          class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none group"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
          />
          <div
            class="sc-bdfBwQ bcEVDZ"
            height="16"
            width="16"
          >
            <svg>
              eye.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputPassword should render as a password isInvalid 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 bxAzkt"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        aria-invalid="true"
        class="Input__InputStyled-sc-1i8sd1r-1 lpjmUZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="InputPassword"
        name="test"
        type="password"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
    >
      <span
        data-errortext="Error message for password"
        data-testid="Input__error"
      >
        <div
          class="sc-bdfBwQ hjDozt text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
      <div
        class="pl-3"
      >
        <button
          class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none group"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
          />
          <div
            class="sc-bdfBwQ bcEVDZ"
            height="16"
            width="16"
          >
            <svg>
              eye.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
